--- a/index.html
+++ b/index.html
@@ -7,5 +7,8 @@
 
 <body>
   <h1>Odin Recipes</h1>
+  <a href="./recipes/carbonara.html">Carbonara</a>
+  <a href="./recipes/lasagna.html">Lasagna</a>
+  <a href="./recipes/steak.html">Steak</a>
 </body>
 </html>
