--- a/recipes/lasagna.html
+++ b/recipes/lasagna.html
@@ -5,6 +5,37 @@
   <title>Lasagna Recipe</title>
 </head>
 <body>
-  <h1>Lasagna Recipe</h1>
+  <h1>Lasagna</h1>
+  <img src="../img/lasagna.jpg" alt="Lasagna" height=" 600" width="800">
+  <p>A simple lasagna recipe. Easy to make, Lots to share!</p>
+  <h3>Ingredients</h3>
+  <ul>
+    <li>Ground Beef (450g)</li>
+    <li>Spaghetti Sauce (1 Jar or 32 ounce)</li>
+    <li>Cheese</li>
+    <ul>
+      <li>Cottage Cheese (32 ounce)</li>
+      <li>shredded Mozzarella (3 cups)</li>
+      <li>grated Parmesan (1/2 cup)</li>
+    </ul>
+    <li>2 Eggs</li>
+    <li>Seasoning</li>
+    <ul>
+      <li>Parsley (2 teaspoons)</li>
+      <li>Salt to taste</li>
+      <li>Pepper to taste</li>
+    </ul>
+    <li>9 Lasagna Noodles</li>
+    <li>Water (1/2 Cup)</li>
+  </ul>
+  <h3>Cooking Instructions</h3>
+  <ol>
+    <li>Preheat Oven to 175 Celsius</li>
+    <li>Heat a large skillet over medium-high heat. Cook and stir ground beef in the hot skillet until browned and crumbly, 8 to 10 minutes. Drain and discard grease. Stir in spaghetti sauce and simmer for 5 minutes.</li>
+    <li>Combine cottage cheese, 2 cups of mozzarella cheese, eggs, 1/2 of the grated Parmesan cheese, dried parsley, salt, and pepper in a large bowl.</li>
+    <li>Spread 3/4 cup of sauce in a 9x13-inch baking dish. Cover with 3 uncooked lasagna noodles, 1 3/4 cups of cheese mixture, and 1/4 cup sauce; repeat layers once more. Top with remaining 3 noodles, sauce, mozzarella, and Parmesan cheese. Pour 1/2 cup water along the edges of the dish. Cover tightly with aluminum foil.</li>
+    <li>Bake in the preheated oven for 45 minutes. Uncover and bake for an additional 10 minutes. Let stand 10 minutes before serving.</li>
+    <li>Serve and enjoy!</li>
+  </ol>
 </body>
 </html>
