--- a/index.html
+++ b/index.html
@@ -7,8 +7,10 @@
 
 <body>
   <h1>Odin Recipes</h1>
-  <a href="./recipes/carbonara.html">Carbonara</a>
-  <a href="./recipes/lasagna.html">Lasagna</a>
-  <a href="./recipes/steak.html">Steak</a>
+  <ul>
+    <li><a href="./recipes/carbonara.html">Carbonara</a></li>
+    <li><a href="./recipes/lasagna.html">Lasagna</a></li>
+    <li><a href="./recipes/steak.html">Steak</a></li>
+  </ul>
 </body>
 </html>
